--- a/SudukoGame/sudokuOffline.html
+++ b/SudukoGame/sudokuOffline.html
@@ -1,1 +1,9 @@
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+    <title>Test</title>
+    <script src="sudokoReal.js"></script>
+ </head>
+ 
+
+<body onload="drawBoard()">
 <div id="sudoku_container"></div>
