--- a/SudukoGame/indexOnline.html
+++ b/SudukoGame/indexOnline.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <title>Sudoku</title>
         <link rel="stylesheet" href="styles.css">
-        <script src = "onlineIndex.js"></script>
+        <script src = "indexOnline.js"></script>
     </head>
     <header>
         <h1>Sudoku</h1>
